--- a/Grocery/package.json
+++ b/Grocery/package.json
@@ -31,12 +31,13 @@
     "cordova-plugin-x-socialsharing": "^6.0.3",
     "cordova-plugin-x-toast": "^2.7.3",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.3",
-    "@angular-eslint/builder": "~13.0.1",
+    "@angular-eslint/builder": "^12.2.1",
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
