--- a/Grocery/package.json
+++ b/Grocery/package.json
@@ -26,6 +26,7 @@
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
+    "@ionic-native/social-sharing": "^4.20.0",
     "@ionic/angular": "^6.0.0",
     "@ionic/cordova-builders": "^6.1.0",
     "cordova-plugin-x-socialsharing": "^6.0.3",
